[package]
name = "globe-cli"
version = "0.2.1"
authors = ["adamsky <adamsky@enum.space>"]
edition = "2018"
repository = "https://github.com/adamsky/globe"
description = "Display an interactive ASCII globe in your terminal."
keywords = ["interactive", "ASCII", "globe", "terminal", "cli"]
readme = "README.md"
license = "GPL-3.0"

[[bin]]
name = "globe"
path = "src/main.rs"

[dependencies]
globe = { version = "0.2.0", path = "../globe" }
crossterm = "0.18.2"
clap = { version = "3.0.0", default-features = false, features = ["std"] }

