[package]
name = "globe"
version = "0.2.0"
authors = ["adamsky <adamsky@enum.space>"]
edition = "2018"
repository = "https://github.com/adamsky/globe"
description = "Customizable ASCII globe generator."
keywords = ["interactive", "ASCII", "globe", "terminal"]
readme = "README.md"
license = "GPL-3.0"
